# gc_api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/gc_api/: fahrenheit_to_celsius.py  main.py  settings.py
tests/: test_conversions.py
