[project]
name = "gc-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
base_code = "gc_api.main:main"
test = "pytest:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gc_api"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "pytest-cov>=5.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
